--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,82 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>CS4241 Assignment 2</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <script src="public/js/scripts.js"></script>
+    <link rel="stylesheet" href="public/css/style.css" />
   </head>
-  <body>
+  <body style="background-color:#454745">
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <input type="text" class="something" id="task" value="Task" />
+      <button class="something" id="btn">submit</button>
     </form>
+    <ul id="myUL"></ul>
+
+    <div class="flex-container" id="fbox">
+      <div>Completed Tasks</div>
+    </div>
   </body>
   <script>
+    const submit = function(e) {
+      // prevent default form action from being carried out
+      e.preventDefault();
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
+      const input = document.querySelector("#task"),
+        json = { task: input.value },
+        body = JSON.stringify(json);
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+      fetch("/submit", {
+        method: "POST",
+        body
+      })
+        .then(function(response) {
+          return response.text();
+        })
+        .then(function(json) {
+          var obj = JSON.parse(json);
+          document.getElementById("myUL").innerHTML +=
+            "<li>" + obj.task + "</li>";
 
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
+          var myNodelist = document.getElementsByTagName("LI");
+          var span = document.createElement("SPAN");
+          var txt = document.createTextNode("\u00D7");
+          span.className = "close";
+          span.appendChild(txt);
+          myNodelist[myNodelist.length - 1].appendChild(span);
 
-    return false
-  }
+          var close = document.getElementsByClassName("close");
+          var i;
+          for (i = 0; i < close.length; i++) {
+            close[i].onclick = function() {
 
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
+              if(this.parentElement.classList.contains("checked")){
+              document.getElementById("fbox").innerHTML +=
+                "<div>" + this.parentElement.textContent.slice(0, -1) + "</div>";
+            }
+              var div = this.parentElement;
+              div.style.display = "none";
+            };
+          }
+          console.log(json);
+        });
+      return false;
+    };
 
+    window.onload = function() {
+      const button = document.querySelector("button");
+      button.onclick = submit;
+    };
+
+    var list = document.querySelector("ul");
+    list.addEventListener(
+      "click",
+      function(ev) {
+        if (ev.target.tagName === "LI") {
+          ev.target.classList.toggle("checked");
+        }
+      },
+      false
+    );
   </script>
 </html>
