--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,51 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <script type="text/javascript" src="js/scripts.js"></script>
   </head>
-  <body>
+  
+    <body>
+<h1>Generate your rapper name</h1>
+
+  <div class="buttonHolder">
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <input placeholder="type first name here" type='text' id='yourname'>
+      <br>
+      <br>
+      <input placeholder="type favorite color here" type='text' id='favColor'>
+      <br>
+      <br>
+      <button> Generate </button>
     </form>
-  </body>
+  </div>
+
+<br>
+<br>
+
+  <div id = "writeUsername" style="display:none">
+    <h1 id='showName'>Your Rapper Name is </h1>
+  </div>
+
+  <br>
+
+  <div id = "canvas" style="display:none">
+    <h3>Here's a list of everyone who has played! Check the bottom to see your name!</h3>
+  </div>
+
+
+</body>
+
+
+
   <script>
 
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
+    window.onload = function() {
+      const button = document.querySelector( 'button' )
+      button.onclick = submit
+   }
 
   </script>
+
 </html>
