📠💑 Checkpoint ./public/index.html:21845626/33

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       <label for="med_priority"> Medium Priority </label><br />
       <input type="radio" id="priority3" name="priority" value="low_priority" />
       <label for="med_priority"> Low Priority </label><br /><br />
-      <button>Submit</button>
-    </form>
+      <button>Add Task</button>
+    </form><br>
 
     <table id="toDoTable">
         <tr>
@@ -35,7 +35,6 @@
           <th>Priority</th>
           <th>Advice</th>
         </tr>
-      </thead>
       <tbody id="taskBody"></tbody>
     </table>
   </body>
