added background and text to the web app

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-
   <div class="jumbotron w-50 p-3 center bg-primary text-light">
   <h1 class="display-4"><b>My TODO List</b></h1>
   <div class="d-flex justify-content-center">
@@ -25,6 +24,17 @@
       </tr>
       </thead>
     </table>
+    </div>
+  </div>
+
+  <div class="jumbotron w-50 p-3 center bg-primary text-white">
+    <div class="d-flex justify-content-center">
+        <p>Simply add a task below and the deadline will be computed by the server, and
+        then returned to the table. <br>
+        <br>
+        The higher priority tasks have shorter 
+        deadlines and the lower priority tasks give you more time to complete them.
+        </p> 
     </div>
   </div>
 
