Added delete and visual representation of the habit grid

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,19 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href = "css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
+  <div id="createHabitForm">
     <form action="">
-      I will
-      <input type='text' id='task' value="your new habit"> every day for next <input type='text' id='weeks' value="4"> weeks.
-      <button id="submitBtn">Start a new habit!</button>
+      <span>I will
+        <input type='text' id='task' value="your new habit"> every day for next <input type='text' id='weeks' value="4"> weeks.</span><br>
+      <button id="submitBtn">Start a new habit today!</button>
     </form>
+  </div>
   <div id = "habitView">
 
-  </div>
   </div>
   </body>
   <script src="js/scripts.js"></script>
