--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,23 @@
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Gompei The Game: High Scores</h1>
-    <h3>By Kyle Mikolajczyk</h3>
+    <div id="page-title" class="title-flex">
+      <h1>Gompei The Game: High Scores</h1>
+      <h3>By Kyle Mikolajczyk</h3>
+    </div>
     <div id="insert-scores-flex" class="insert-scores-flex">
       <h2>Insert new score</h2>
       <h4>Use this form to post your high score</h4>
-      <form action="" id="score-form">
+      <form id="score-form">
         <input type='text' id='name' placeholder="Your Name">
         <input type='number' id='score' placeholder="Your High Score">
-        <input type='date' id='date' value="Date of Score">
+        <input type='date' id='date' value="2020-09-14">
        <button id="submit-button" class="my-buttons">Submit</button>
-      </form>
-    </div>
-    <h2>All Scores</h2>
+       <h2>All Scores</h2>
     <table id="highscores">
       <tr>
         <th>Name</th>
@@ -27,57 +28,7 @@
         <th>Date</th>
       </tr>
     </table>
+      </form>
+    </div>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    try {
-      e.preventDefault()
-    }
-    catch {
-      //If I forced the submit button on window load just continue, this was not a form submission
-    }
-
-    const number = document.querySelector('#score');
-    const date = document.querySelector('#date');
-    const input = document.querySelector( '#name' ),
-          json = { name: input.value, date: date.value, score: number.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      
-      // do something with the reponse 
-      console.log(response.json().then((data) => {
-      responseJSON(data);
-      }));;
-      console.log( response )
-    })
-
-    return false
-  }
-
-  function responseJSON(json) {
-    console.log(json);
-    var table = '<tr><th>Name</th><th>Score</th><th>Date</th><th>Generated Name\/Score</th></tr>';
-    for(var i = 0; i < json.length; i++) {
-      var obj = json[i];
-      console.log(obj);
-      console.log(obj[0]);
-      table+="<tr><td>" + obj['name'] + "</td><td>" + obj['score'] + "</td><td>" + obj['date'] + "</td><td>" + obj['formatted_score'] + "</td></tr>";
-    }
-    document.getElementById("highscores").innerHTML = table;
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-    submit();
-  }
-
-  </script>
 </html>
