--- a/public/index.html
+++ b/public/index.html
@@ -3,39 +3,29 @@
   <head>
     <title>CS4241 Assignment 2</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <h1 font-weight: bold;>Welcome to Speed Clicker</h1>
+
+    <p id="WelcomeText">
+      This is a webpage for Jordan Stoessel's Assignment 2. After hitting the <strong>start</strong> button you will be timed for 30 seconds to click as many times as you want. Your results will be displayed within the <strong>leaderboard</strong>. Try to get the high score! 
+      <br>
+      <br>
+    </p>
+
+    <div>
+      <button id='startbtn' onclick=click()>Start</button>
+    </div>
+    <div>
+      <p id='points'>0 Points</p>
+    </div>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      <p class='nameregister'>
+        Please input your name:
+      </p>
+      <input type='text' id='yourname' class='nameregister' value="">
+      <button class='nameregister'>Submit</button>
     </form>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
