Table styles, readme updated

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
         <th>Name</th>
         <th>Score</th>
         <th>Date</th>
+        <th>Generated Name/Score</th>
       </tr>
     </table>
       </form>
