--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,57 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>CS4241 Assignment 2</title>
+    <title>Birthdays Manager</title>
     <meta charset="utf-8">
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lora:wght@500&family=Overpass&family=Righteous&display=swap" rel="stylesheet">  </head>
   <body>
+    <div id='header'>
+      <h1>Birthday Manager</h1>
+    </div>
+    <div class="grid">
+      <div class="boundary"></div>
+      <div class="content">
+        <br/>
+    <h2 class="info">Add a Birthday Below</h2>
+    <br/>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
-      <button>submit</button>
+      Person's Name:&emsp;&emsp;&emsp;&emsp;&ensp;<input type='text' class='birthdayFields' value="name"><br/>
+      Birthday (MM/DD/YYYY) <input type='text' class='birthdayFields' value="birthday MM/DD/YYYY"><br/>
+      Time (HH:MM AM/PM)&emsp;&ensp;<input type='text' class='birthdayFields' value="time">
+      <p class='button-styling'><button>Add Birthday</button></p>
     </form>
+    <br/>
+    <h2>Birthday Table</h2>
+    <br/>
+    <table id="birthdayTable">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Birthday</th>
+          <th>Reminder Time</th>
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    <br/>
+    <br/>
+    <div id='card'>
+      <h1>Happy Birthday <span class='cardSpan'></span>!!</h1>
+      <br>
+      <img src="img/happybirthday.gif" alt="birthday image">
+      <br>
+      <p>Happy birthday! Birthdays come around every year, but friends like you can only be found once in a lifetime. Wishing you a fabulous birthday! Hope your birthday is as wonderful and extraordinary as you are.</p>
+      <br>
+      <h2>Love, &nbsp;</em><span class='cardYourName' contenteditable>your_name</span></h2>
+    </div>
+      </div>
+      <div class="boundary"></div>
+
+    </div>
+  
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
+  <script src="js/scripts.js"></script>
 </html>
