the server and client function
the back and forth data base functionality of the server and client have been implamented

--- a/public/index.html
+++ b/public/index.html
@@ -6,27 +6,90 @@
   </head>
   <body>
     <form action="">
-      <input type='text' id='yourname' value="your name here">
+      <input type='text' id='task' value="Task">
+      <input type='text' id='DaysToFinish' value="How many days till due">
       <button>submit</button>
     </form>
+      <table id = "TODO list">
+        <tr>
+        </tr>
+      </table>
+    
   </body>
   <script>
-
+  let matrix = []
   const submit = function( e ) {
     // prevent default form action from being carried out
     e.preventDefault()
 
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
+    const inputTASK = document.querySelector( '#task' )
+    const inputDAYS = document.querySelector( '#DaysToFinish' )
+
+    const today = new Date().getTime();
+    
+    jsonDATA = {Task: inputTASK.value, DaysTillDue: inputDAYS.value, curDate: today.toString()}
+    let body = JSON.stringify(jsonDATA) 
 
     fetch( '/submit', {
       method:'POST',
-      body 
+      body
     })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
+        .then( function( response ) {
+          response.json().then((data)=>{
+            console.log(data)
+            if(data.dataBase === 'Bad Input'){
+              console.log("Bad Inputs")
+              //send user message here
+            }else{
+              //clear the TODO list every time
+              var oldTable = document.getElementById("TODO list")
+              oldTable.parentNode.removeChild(oldTable)
+
+              //make new table
+              var newTable =document.createElement("table")
+              newTable.setAttribute("id", "TODO list")
+              document.body.appendChild(newTable)
+
+              //make a header for the table
+              header = newTable.createTHead()
+              var row = header.insertRow(0)
+              row.insertCell(0).innerHTML = '<b> Task</b>'
+              row.insertCell(1).innerHTML = '<b> Days Till Due</b>'
+              row.insertCell(2).innerHTML = '<b> Priority (Hours Till Due)</b>'
+
+              //checking to see if the task is aleady on the TODO list
+              whatToDo = ["Check", -1]
+              for (i = 0; i < matrix.length; i ++){
+                if (data.Task === matrix[i].Task){
+                  whatToDo[0] = "Update"
+                  whatToDo[1] = i
+                  break
+                }
+              }
+
+              if (whatToDo[0] === "Update"){
+                //update the item in the data base
+                matrix[whatToDo[1]].DaysTillDue = data.DaysTillDue
+                matrix[whatToDo[1]].Priority = data.Priority
+              }else{
+                //add the task to the local database
+                matrix.push(data)
+              }
+
+              //sorts the list of tasks acording to priority low number first
+              matrix.sort(function(a, b){if (a.Priority === b.Priority){return 0} else{return (a.Priority < b.Priority) ? -1:1}})
+
+              //reorginize the TODO list
+              for (i = 0; i < matrix.length; i ++){
+                console.log('Looping')
+                var dataRow = newTable.insertRow(i+1)
+                dataRow.insertCell(0).innerHTML = matrix[i].Task
+                dataRow.insertCell(1).innerHTML = matrix[i].DaysTillDue
+                PRIORITY = Math.floor(matrix[i].Priority/3600000)
+                dataRow.insertCell(2).innerHTML = PRIORITY
+              }
+            }
+          })
     })
 
     return false
