--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
   </div>
   <div class="split left" id="div1">
     <h2>Contact Information</h2>
-    <form action="">
+    <form>
       <fieldset>
-        <legend align="center">Title</legend>
+        <legend id="title">Title</legend>
         <ul>
           <li>
             <label for="pro">
@@ -62,7 +62,7 @@
         </p>
       <h2>Space Slot</h2>
       <fieldset>
-        <legend align="center">Space You Want to Use</legend>
+        <legend id="space">Space You Want to Use</legend>
         <ul>
           <li>
             <label for="norm">
