Added Readme requirements

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
       <div id="scores" class="block">
         Current: <span id="currScore">0</span><br>
         <h5>Previous Scores</h5>
-        <div id="serverscores"></div>
+        <table id="serverscores"></table>
       </div>
       <div id="scoreActions">
         <button id="endgame" class="butt" onclick="endGame()">End Game</button>
-        <br>
         <button id="hint"  class="butt" onclick="hint()">If you need help</button>
+        <button id="delete"  class="butt" onclick="deleteEverything()">Delete Everything</button>
       </div>
     </div>
     <div id="center-block" class='container'>
