--- a/public/index.html
+++ b/public/index.html
@@ -1,79 +1,50 @@
 <!doctype html>
 <html lang="en">
-  <div class="topnav">
-    <a  href="https://a2-kirstenhart.glitch.me/">Add Player Stats</a>
-    <a  href="https://a2-kirstenhart.glitch.me/roster.html">Team Stats</a>
-  </div>  
-  <head>
+
+<head>
     <title>Add Player Stats</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js"></script>
     <meta charset="utf-8">
   </head>
-  <body>
 
-    <div id="userInput">
-      <form action="">
-        Choose a Player: <br>
-        <label for='number'> Number: </label>
-          <select id='number'>
-            <option value=select.number></option>
-          </select>
-        <label for='firstName'> First Name: </label>
-        <input type='text' id='firstName'>
-        <label for='lastName'> Last Name: </label>
-        <input type='text' id='lastName'><br>
-        <label for='goals'> Goals: </label>
-        <input type='number' id='firstName'>
-        <label for='assists'> Assists: </label>
-        <input type='number' id='assists'><br>
-        <button>Add Player's Stats</button>
-      </form>
+  <body>
+    <div class="container">
+      <div class="header">
+        <h1>Build Your Roster</h1>
+      </div>
+      <div id="userInput">
+        <form action="">
+          Add a Player: <br>
+          <label for='number'> Number: </label>
+          <input type='number' id='number'>
+          <label for='firstName'> First Name: </label>
+          <input type='text' id='firstName'>
+          <label for='lastName'> Last Name: </label>
+          <input type='text' id='lastName'><br>
+          <label for='goals'> Goals: </label>
+          <input type='number' id='firstName'>
+          <label for='assists'> Assists: </label>
+          <input type='number' id='assists'><br>
+          <button>Add Player</button>
+        </form>
+      </div>
+
+      <div class="results">
+        <table id="results">
+          <tr>
+            <th>Number</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Goals</th>
+            <th>Assists</th>
+          </tr>
+        </table>
+      </div>
+
     </div>
     
+    
   </body>
-  <script>
 
-  const addPlayer = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const number = document.querySelector( '#number' ),
-    const firstName = document.querySelector( '#firstName' ),
-    const lastName = document.querySelector( '#lastName' ),
-    const goals = document.querySelector( '#goals' ),
-    const assists = document.querySelector( '#assists' ),
-    const input = { 'number': number, 'firstName': firstName, 'lastName': lastName, 'goals': goals, 'assists': assists },
-    const json = { number: number.value, firstName: firstName.value, lastName: lastName.value, goals: goals.value, assists: assists.value }
-    const body = JSON.stringify( json )
-
-    fetch( '/addPlayer', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    fetch( '/addPlayer', {
-      method:'GET',
-      body: JSON.parse( appData )
-    })
-    .then( response => response.json() )
-    .then( appData => {
-       console.log('Success: ', data);
-    })
-    .catch( ( error ) => {
-      console.error('Error: ', error )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = addPlayer
-  }
-
-  </script>
 </html>
