--- a/public/roster.html
+++ b/public/roster.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Roster</title>
+    <title>Team Stats</title>
     <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8">
   </head>
   <body>
-    <h1 id="header"> Roster</h1>
+    <h1 id="header"> Team Stats </h1>
     
     <div id="userInput">
       <table id="roster">
