minor changes to fix table

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
           <label for='lastName'> Last Name: </label>
           <input type='text' id='lastName'><br>
           <label for='goals'> Goals: </label>
-          <input type='number' id='firstName'>
+          <input type='number' id='goals'>
           <label for='assists'> Assists: </label>
           <input type='number' id='assists'><br>
           <button>Add Player</button>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="results">
-        <table id="results">
+        <table id="resultTable">
           <tr>
             <th>Number</th>
             <th>First Name</th>
@@ -42,9 +42,7 @@
         </table>
       </div>
 
-    </div>
-    
-    
+    </div>    
   </body>
 
 </html>
