--- a/public/index.html
+++ b/public/index.html
@@ -5,37 +5,29 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <form action="">
-      <input type='text' id='yourname' value="your name here">
+    <h1>Route Logger</h1>
+    <form id="input" action="">
+      <label for="inputRoute">Route</label>
+      <input type='text' id='inputRoute' value=""><br>
+      <label for="inputTime">Time</label>
+      <input type='text' id='inputTime' value=""><br>
+      <label for="inputDistance">Distance</label>
+      <input type='text' id='inputDistance' value=""><br>
+      <p></p>
       <button>submit</button>
     </form>
+    <hr></hr>
+    <table id="resultTable">
+      <thead>
+        <tr>
+          <th>Route</th>
+          <th>Time</th>
+          <th>Distance</th>
+          <th>Pace</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
   </body>
-  <script>
-
-  const submit = function( e ) {
-    // prevent default form action from being carried out
-    e.preventDefault()
-
-    const input = document.querySelector( '#yourname' ),
-          json = { yourname: input.value },
-          body = JSON.stringify( json )
-
-    fetch( '/submit', {
-      method:'POST',
-      body 
-    })
-    .then( function( response ) {
-      // do something with the reponse 
-      console.log( response )
-    })
-
-    return false
-  }
-
-  window.onload = function() {
-    const button = document.querySelector( 'button' )
-    button.onclick = submit
-  }
-
-  </script>
 </html>
