--- a/public/index.html
+++ b/public/index.html
@@ -9,89 +9,96 @@
       Your Work Advisor
     </h1>
     <form action="">
-      <label for="priority"> Task </label><br />
-      <input type="text" id="yourtask" value="Enter your task here" /><br /><br />
-      <label for="priority"> Due Date </label><br />
-      <input type="datetime-local" id="taskduedate" value="date" /><br /><br />
-      <label for="priority"> Priority </label><br />
+      <label for="yourtask"> Task </label><br />
+      <input
+        type="text"
+        id="yourtask"
+        value="Enter your task here"
+      /><br /><br />
+      <label for="taskduedate"> Due Date </label><br />
+      <input type="datetime-local" id="taskduedate"/><br />
+      <p> Priority </p>
       <input
         type="radio"
         id="priority1"
         name="priority"
         value="high_priority"
       />
-      <label for="high_priority"> High Priority </label><br />
+      <label for="priority1"> High Priority </label><br />
       <input type="radio" id="priority2" name="priority" value="med_priority" />
-      <label for="med_priority"> Medium Priority </label><br />
+      <label for="priority2"> Medium Priority </label><br />
       <input type="radio" id="priority3" name="priority" value="low_priority" />
-      <label for="med_priority"> Low Priority </label><br /><br />
+      <label for="priority3"> Low Priority </label><br /><br />
       <button>Add Task</button>
-    </form><br>
+    </form>
+    <br />
 
     <table id="toDoTable">
-        <tr>
-          <th>Creation Date</th>
-          <th>Task</th>
-          <th>Priority</th>
-          <th>Advice</th>
-        </tr>
+      <tr>
+        <th>Creation Date</th>
+        <th>Task</th>
+        <th>Priority</th>
+        <th>Advice</th>
+      </tr>
       <tbody id="taskBody"></tbody>
     </table>
     <script>
-    function addRows(json) {
-      //Find the table
-      const tableBody = document.getElementById("taskBody");
-      //Insert a new row and then new cells
-      let row = tableBody.insertRow(0);
-      let cell1 = row.insertCell(0);
-      let cell2 = row.insertCell(1);
-      let cell3 = row.insertCell(2);
-      let cell4 = row.insertCell(3);
+      function addRows(json) {
+        //Find the table
+        const tableBody = document.getElementById("taskBody");
+        //Insert a new row and then new cells
+        let row = tableBody.insertRow(0);
+        let cell1 = row.insertCell(0);
+        let cell2 = row.insertCell(1);
+        let cell3 = row.insertCell(2);
+        let cell4 = row.insertCell(3);
 
-      //Fill those cells with the data gotten back from the server, this includes the new fields
-      row.insertCell(0).innerHTML = json.date;
-      row.insertCell(1).innerHTML = json.yourtask;
-      row.insertCell(2).innerHTML = json.priority;
-      row.insertCell(3).innerHTML = json.message;
-      console.log("got here")
-    }
-
-    const submit = function(e) {
-      // prevent default form action from being carried out
-      e.preventDefault();
-
-      function displayRadioValue() {
-        var ele = document.getElementsByName("priority");
-
-        for (i = 0; i < ele.length; i++) {
-          if (ele[i].checked) return ele[i].value;
-        }
+        //Fill those cells with the data gotten back from the server, this includes the new fields
+        row.insertCell(0).innerHTML = json.date;
+        row.insertCell(1).innerHTML = json.yourtask;
+        row.insertCell(2).innerHTML = json.priority;
+        row.insertCell(3).innerHTML = json.message;
+        console.log("got here");
       }
 
-      const input1 = document.querySelector("#yourtask"),
-        input2 = document.querySelector("#taskduedate"),
-        input3 = displayRadioValue(),
-        json1 = {
-          yourtask: input1.value,
-          date: input2.value,
-          priority: input3
-        },
-        body = JSON.stringify(json1);
+      const submit = function(e) {
+        // prevent default form action from being carried out
+        e.preventDefault();
 
-      fetch("/submit", {
-        method: "POST",
-        body
-      }).then(response => response.json())
-    .then( function( response ) {
-        addRows(response);})
+        function displayRadioValue() {
+          var ele = document.getElementsByName("priority");
 
-      return false;
-    };
+          for (i = 0; i < ele.length; i++) {
+            if (ele[i].checked) return ele[i].value;
+          }
+        }
 
-    window.onload = function() {
-      const button = document.querySelector("button");
-      button.onclick = submit;
-    };
-  </script>
+        const input1 = document.querySelector("#yourtask"),
+          input2 = document.querySelector("#taskduedate"),
+          input3 = displayRadioValue(),
+          json1 = {
+            yourtask: input1.value,
+            date: input2.value,
+            priority: input3
+          },
+          body = JSON.stringify(json1);
+
+        fetch("/submit", {
+          method: "POST",
+          body
+        })
+          .then(response => response.json())
+          .then(function(response) {
+            addRows(response);
+          });
+
+        return false;
+      };
+
+      window.onload = function() {
+        const button = document.querySelector("button");
+        button.onclick = submit;
+      };
+    </script>
   </body>
 </html>
